@@ -55,6 +55,12 @@ pipeline {
               }
             }
         }
+        stage('Maven Package') {
+            steps {
+                echo 'Maven Package started'
+                sh 'export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED" && mvn package'
+            }
+        }
 
     }
 }
